<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Challenge2Activity1">

    <Button
        android:id="@+id/buttonTextOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_one"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonTextTwo"
        app:layout_constraintEnd_toStartOf="@+id/buttonTextTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="openSecondActivityTextOne"/>

    <Button
        android:id="@+id/buttonTextTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonTextThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonTextOne"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="openSecondActivityTextTwo"/>

    <Button
        android:id="@+id/buttonTextThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_three"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonTextTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonTextTwo"
        android:onClick="openSecondActivityTextThree"/>
</androidx.constraintlayout.widget.ConstraintLayout>